<resources>
    <string name="app_name">CheemsTour</string>
    <string name="view_map">View Trip Map</string>
    <string name="add_location">Add Location</string>
    <string name="hint_name">Location name</string>
    <string name="hint_city">City</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="save_location">Save Location</string>
    <string name="form_name">Name:</string>
    <string name="form_city">City:</string>
</resources>